objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>AbortedCampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked when the related campaign was aborted</description>
        <label>AbortedCampaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountIntegrationId__c</fullName>
        <description>Reference to AccountIntegrationId__c field on Account Object</description>
        <formula>Contact.Account.AccountIntegrationId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountIntegrationId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyId__c</fullName>
        <description>Id Identifier of campaign&apos;s text message preloaded on SMS system.</description>
        <externalId>true</externalId>
        <label>BodyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtraParams__c</fullName>
        <description>It is used to send extra fields separated by a semicolon to the SMS system, this field should be used when the campaign text message is preloaded on SMS system.</description>
        <label>ExtraParams</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check whether a campaign member has to send an SMS or not.</description>
        <label>IsSMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MessageID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>#Mkt #Sprint18 SMS Administrator</description>
        <label>Message ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Crossobject__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>SMS Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Crossobject__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>CampaignMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MobilePhoneSend__c</fullName>
        <description>The mobile phone to send the message</description>
        <label>MobilePhoneSend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileSendResponse__c</fullName>
        <description>This field contains the response of the SMS system after the SMS has been sent.</description>
        <label>MobileSendResponse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MobileSendStatus__c</fullName>
        <description>Status of SMS Send.
Pending (It is when the campaign member is created and the SMS has not been sent)
Enviado (It is when the SMS has been sent)</description>
        <label>MobileSendStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Enviado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MobileText__c</fullName>
        <description>Text messages body used in SMS sends</description>
        <label>MobileText</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isSMSOnline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>#MKT #Sprint18 SMS Administrator</description>
        <label>Is SMS Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ActionType__c</fullName>
        <label>Action Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignName__c</fullName>
        <formula>Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignOmniScriptURL__c</fullName>
        <formula>&quot;/apex/%nsp%OmniScriptUniversalPage?layout=lightning&amp;id=&quot; &amp; Id &amp; &quot;&amp;campaignId=&quot; &amp;  CampaignId &amp; &quot;#/OmniScriptType/&quot; &amp;  Campaign.vlocity_cmt__ProcessType__c &amp; &quot;/OmniScriptSubType/&quot; &amp; Campaign.vlocity_cmt__ProcessSubType__c &amp; &quot;/OmniScriptLang/&quot; &amp; Campaign.vlocity_cmt__ProcessLanguage__c &amp; &quot;/ContextId/&quot;&amp; Id &amp; &quot;/PrefillDataRaptorBundle/&quot;+ Campaign.vlocity_cmt__ProcessPrefillBundle__c +&quot;/false&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign OmniScript URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignStatus__c</fullName>
        <formula>TEXT(Campaign.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignType__c</fullName>
        <formula>TEXT(Campaign.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EmailTemplate__c</fullName>
        <formula>Campaign.vlocity_cmt__EmailTemplate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastCallDate__c</fullName>
        <label>Last Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDate__c</fullName>
        <formula>Campaign.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TargetCallDate__c</fullName>
        <label>Target Call Date</label>
        <type>DateTime</type>
    </fields>
    <recordTypes>
        <fullName>Campaign_Member</fullName>
        <active>true</active>
        <label>Campaign Member</label>
    </recordTypes>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>